# sample-amazon-bedrock-agentcore-onboarding-jp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README_ja.md  main.py  pyproject.toml
.amazonq/cli-agents/: workshop-builder.json
.amazonq/rules/: principle.md
01_code_interpreter/: README.md  README_ja.md  test_cost_estimator_agent.py
01_code_interpreter/cost_estimator_agent/: config.py  cost_estimator_agent.py
02_runtime/: .gitignore  README.md  README_ja.md  clean_resources.py  prepare_agent.py
02_runtime/deployment/: invoke.py  invoke_async.py  requirements.txt
03_identity/: .agentcore.json  .gitignore  README.md  README_ja.md  clean_resources.py  setup_inbound_authorizer.py  test_identity_agent.py
04_gateway/: .agentcore.json  .gitignore  README.md  README_ja.md  clean_resources.py  clearn_resources.py  deploy.sh  setup_outbound_gateway.py  template.yaml  test_gateway.py
04_gateway/src/: app.py  requirements.txt
05_observability/: README.md  README_ja.md  test_observability.py
06_memory/: .gitignore  README.md  README_ja.md  clean_resources.py  clearn_resources.py  test_memory.py
